tests/bad/syntax/014-triple-type.clap
type triple <a; b; c> = { _0 a + _1 b + _2 c }

